Ajax progress bars, autoSize fixes (property of Fractal now), bugs in redrawing fixed (single draw only), ajaxify some more db actions, session & formula load/save/delete improvements and completed functionality for formula set management, prevent db updates when user_id not set or doesn't match record, fixed palette css to prevent wrap in small window

--- a/styles.css
+++ b/styles.css
@@ -286,11 +286,14 @@ nav {float: left;}
 }
 
 #controls {
-  z-index: 2;
+  z-index: 1;
   margin: 0px 0px 2px 0px; padding:0px;
   height: 28px;
   color: #888;
-  float: right;
+  /*float: right;*/
+/* Fix so palette doesn't wrap when window resized too small */
+position: absolute; right: 2px; 
+overflow: hidden;
 }
 
 #left {
